# Clarus

./: AudioBouncer.cpp  AudioBouncer.hpp  AudioUtil.cpp  AudioUtil.hpp  CMakeLists.txt  Clarus.pro  RemoteVideoFeed.cpp  RemoteVideoFeed.hpp  VideoDevice.cpp  VideoDevice.hpp  VideoServer.cpp  VideoServer.hpp  main.cpp
src/Common/: AudioBouncer.hpp  AudioUtil.cpp  AudioUtil.hpp  ChatMessage.cpp  ChatMessage.hpp  ChatWindow.cpp  ChatWindow.hpp  ContactWindow.cpp  ContactWindow.hpp  MessageClient.cpp  MessageClient.hpp  MessageFlags.cpp  MessageFlags.hpp  MessageMarshaller.cpp  MessageMarshaller.hpp  NetUtil.cpp  NetUtil.hpp  NetworkStream.cpp  NetworkStream.hpp  RemoteVideoFeed.cpp  RemoteVideoFeed.hpp  TimeUtil.cpp  TimeUtil.h  VideoDevice.hpp  VideoServer.cpp  main.cpp  main.hpp
src/Common/Audio/: AudioBouncer.cpp  AudioUtil.cpp
src/Common/Chat/: ChatGroup.cpp  ChatGroup.hpp  ChatMessage.cpp  ChatMessage.hpp  ConnectionError.cpp  ConnectionError.hpp  Identity.cpp  Identity.hpp  MessageFlags.cpp  MessageFlags.hpp  ResourceManager.cpp  ResourceManager.hpp
src/Common/Chat/Identity/: Identity.cpp  Identity.hpp  LocalIdentity.cpp  LocalIdentity.hpp  RemoteIdentity.cpp  RemoteIdentity.hpp
src/Common/Chat/Network/: ClientManager.cpp  ClientManager.hpp  EndpointManager.cpp  EndpointManager.hpp  IdentityExchange.cpp  IdentityExchange.hpp  MessageClient.cpp  MessageClient.hpp  MessageEndpoint.cpp  MessageEndpoint.hpp  MessageHandler.cpp  MessageHandler.hpp  MessageServer.cpp  MessageServer.hpp  NetUtil.cpp  NetUtil.hpp  NetworkStream.cpp  NetworkStream.hpp  PixmapExchange.cpp  PixmapExchange.hpp
src/Common/Chat/Resource/: ChatResource.cpp  ChatResource.hpp  LocalPixmap.cpp  LocalPixmap.hpp  LocalResource.cpp  LocalResource.hpp  LocalStringResource.cpp  LocalStringResource.hpp  RemotePixmap.cpp  RemotePixmap.hpp  RemoteResource.cpp  RemoteResource.hpp  RemoteStringResource.cpp  RemoteStringResource.hpp  ResourceMessage.cpp  ResourceMessage.hpp
src/Common/Chat/UI/: ChatMessageDelegate.cpp  ChatMessageDelegate.hpp  ChatWindow.cpp  ChatWindow.hpp  ContactWindow.cpp  ContactWindow.hpp  ConversationView.cpp  ConversationView.hpp  EndpointButton.cpp  EndpointButton.hpp  EndpointListWidget.cpp  EndpointListWidget.hpp  EndpointWidget.cpp  EndpointWidget.hpp  GroupHeaderWidget.cpp  GroupHeaderWidget.hpp  LocalIdentityWidget.cpp  LocalIdentityWidget.hpp  LoginWidget.cpp  LoginWidget.hpp  MainWindow.cpp  MainWindow.hpp  MessageLabel.cpp  MessageLabel.hpp  SelectEndpointsDialog.cpp  SelectEndpointsDialog.hpp  resources.qrc
src/Common/Video/: VideoDevice.cpp  VideoServer.hpp
